--- a/src/static/variables.scss
+++ b/src/static/variables.scss
@@ -1,4 +1,5 @@
 $back-color: black;
 $front-color: white;
 $alt-color: grey;
+$coffee-color: #b5651d;
 $font-stack: 'Courier Prime', monospace;
